--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,13 @@
+<!--
+File: index.html
+Author: Kurucz János
+Copyright: 2023, Kurucz János
+Group: Szoft 1/I/E
+Date: 2023-01-31
+Github: https://github.com/kuruczjanos/
+Licenc: GNU GPL
+-->
+
 <!DOCTYPE html>
 <html lang="hu">
 <head>
