--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@ Author: Kurucz János
 Copyright: 2023, Kurucz János
 Group: Szoft 1/I/E
 Date: 2023-01-31
-Github: https://github.com/kuruczjanos/
+Github: https://github.com/KuruczJanos/terkup.git
 Licenc: GNU GPL
 -->
 
